Opened 8 months ago

Closed 8 months ago

Last modified 8 months ago

#18919 closed bug (fixed)

System panic after running "ps2republish" from KDL

Reported by: luxohaiku Owned by:
Priority: normal Milestone: R1/beta5
Component: Drivers/Input/PS2 Version: R1/beta4
Keywords: Cc:
Blocked By: Blocking:
Platform: x86-64

Description

When i started Haiku beta 4 (The installer from a DVD) i noticed that both the keyboard and the trackpad were not working, so i connected an external USB keyboard and i went in the Kernel Debugging Land. Tried to run some commands to see if i could find any hints on what could be causing the issue. As soon as i run the "ps2republish" command the system panicked. The laptop i used to run Haiku is an HP Compaq 6720s.

Attachments (2)

panic.jpg (1.0 MB ) - added by luxohaiku 8 months ago.
Ouput of the panic
20240619_194407.jpg (882.6 KB ) - added by luxohaiku 8 months ago.
Panic in the nightly build

Download all attachments as: .zip

Change History (13)

by luxohaiku, 8 months ago

Attachment: panic.jpg added

Ouput of the panic

comment:1 by korli, 8 months ago

What about a nightly build?

comment:2 by luxohaiku, 8 months ago

Even with a nightly build the keyboard and trackpad aren't working, and using "ps2republish" from KDL produces a panic.

by luxohaiku, 8 months ago

Attachment: 20240619_194407.jpg added

Panic in the nightly build

comment:3 by korli, 8 months ago

Component: Drivers/Input/PS2/KeyboardDrivers/Input/PS2

comment:4 by madmax, 8 months ago

You have uncovered a 15-year-old bug.

The command admits a device number, "(0-3 mouse, 4 keyb (default))". Unfortunately, after hrev28416(!), the keyboard is number 5 and the default 4 is synaptics passthrough, which passes commands to parent device, which in this case is not set and nowhere is that checked.

comment:5 by korli, 8 months ago

https://review.haiku-os.org/c/haiku/+/7785 Not sure why it doesn't crash for me locally.

comment:6 by korli, 8 months ago

Please check with hrev57770 or newer.

comment:7 by luxohaiku, 8 months ago

Tried it with "hrev57774", now using the "ps2republish" command doesn't produce a panic anymore.

comment:8 by luxohaiku, 8 months ago

Last edited 8 months ago by luxohaiku (previous) (diff)

comment:9 by korli, 8 months ago

Resolution: fixed
Status: newclosed

comment:10 by korli, 8 months ago

Thanks for the feedback. About the non-working keyboard device, is it a ps2 device?

comment:11 by luxohaiku, 8 months ago

Both the internal keyboard and the internal touchpad are recognised as PS/2 devices.

Note: See TracTickets for help on using tickets.