ps2: republish debugger command should use keyboard number 5 by default

should fix #18919, I couldn't reproduce the crash locally.

Change-Id: Ic522c299a758a98e83de03a0e84014e97984ae69
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7785
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>
Reviewed-by: Adrien Destugues <pulkomandy@pulkomandy.tk>